# trading_strategy_optimization_benchmarks

./: .gitignore  LICENSE  README.md
sparring/: .gitignore  Cargo.toml  config.yaml
sparring/converters/: Cargo.toml
sparring/converters/src/: from.rs  into.rs  lib.rs  parse.rs
sparring/converters/tests/: enums.rs  structs.rs
sparring/macros/src/: lib.rs
sparring/merovingian/: Cargo.toml
sparring/merovingian/src/: hlcv.rs  lib.rs  non_minable_models.rs  variable.rs
sparring/mouse/: Cargo.toml
sparring/mouse/src/: error.rs  ext.rs  lib.rs  log.rs
sparring/nebuchadnezzar/apis/bitmex/: Cargo.toml
sparring/nebuchadnezzar/nebuchadnezzar_core/src/: lib.rs  signatures.rs
sparring/sparring/: Cargo.toml
sparring/sparring/src/: account.rs  account16.rs  context.rs  load_hlcv.rs  main.rs  map.rs  plot.rs
