[package]
name = "converters"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.24"

[dependencies.syn]
version = "1.0.60"
default_features = false
features = ["extra-traits", "derive", "parsing", "proc-macro", "printing"]
