[package]
name = "sparring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse = { path = "../mouse" }
config = { path = "../config" }
nebuchadnezzar = { path = "../nebuchadnezzar" }
merovingian = { path = "../merovingian" }
cmaes = "0.2.1"
simplers_optimization = "0.4.3"
chrono = "0.4.19"
memmap2 = "0.3.1"
tokio = { version = "1.11.0", features = ["full"] }
futures-util = { version = "0.3.14", features = ["sink"] }
ordered-float = "3.0.0"
plotters = "0.3.1"
rayon = "1.5.1"
rand = "0.8.5"

[profile.release]
debug = true
